--- a/HW1207/21_徐偉峻/CH12.03_Q05.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q05.md
@@ -9,9 +9,18 @@ Testing the Slope of the Line: Use the data given. Do the data provide sufficien
 | y | 1  | 1  | 3 | 5 | 5 |
 
 
-a = 3
-b = 1.2
-least-square line: y = 3 + 1.2x
+$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 
+
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 
+
+The least-squares line: y = a + bx 
+
+b = $\frac{S_{xx}}{S_{xy}}$ = 1.2
+
+a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 3
+
+y = 3 + 1.2x
+
 
 
 用t檢定檢定資料是否存在線性關係
