--- a/HW1207/21_徐偉峻/CH12.03_Q05.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q05.md
@@ -9,13 +9,16 @@ Testing the Slope of the Line: Use the data given. Do the data provide sufficien
 | y | 1  | 1  | 3 | 5 | 5 |
 
 
-$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 
+$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 10
 
-$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
+
+$S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ = 16
+
 
 The least-squares line: y = a + bx 
 
-b = $\frac{S_{xx}}{S_{xy}}$ = 1.2
+b = $\frac{S_{xx}}{S_{xy}}$ = 10/12 = 1.2
 
 a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 3
 
