--- a/HW1207/21_徐偉峻/CH12.03_Q05.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q05.md
@@ -8,13 +8,15 @@ Testing the Slope of the Line: Use the data given. Do the data provide sufficien
 |:-:|:--:|:--:|:-:|:-:|:-:|
 | y | 1  | 1  | 3 | 5 | 5 |
 
+$\bar{x}$ = $\frac{-2 - 1 + 0 + 1 + 2}{5}$ = 0
+
+$\bar{y}$ = $\frac{1 + 1 + 3 + 5 + 5}{5}$ = 3
 
 $S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 10
 
 $S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
 
 $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ = 16
-
 
 The least-squares line: y = a + bx 
 
@@ -24,21 +26,18 @@ a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 3
 
 y = 3 + 1.2x
 
+Test using the t statistic at the 1% level of significance.
 
-
-用t檢定檢定資料是否存在線性關係
----
 $H_0$ : b = 0
 
 $H_a$ : b $\ne$ 0
 
-因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+$\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
 
-且 $\alpha$ = 0.01
+$\alpha$ = 0.01
 
 RR = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
 
-計算統計量
 
 $t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
 
@@ -47,8 +46,7 @@ $t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\f
 統計量並未落在拒絕域中，故我們不拒絕虛無假設，即無充分證據證明 X和 Y有線性關係
 
 
-建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
----
+What does the phrase "99% confident" mean?
 
 99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
 
