--- a/HW1207/18_張睿廷/CH12.03_Q09.md
+++ b/HW1207/18_張睿廷/CH12.03_Q09.md
@@ -8,10 +8,18 @@
 
 <img width="907" alt="image" src="https://github.com/user-attachments/assets/249659b0-cf9d-4dcd-b561-c89b6cd075c5" />
 
+![IMG_0340](https://github.com/user-attachments/assets/b2c5d512-9770-4028-9ffb-be24591311fd)
+
+
 ### c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
 
 <img width="239" alt="image" src="https://github.com/user-attachments/assets/1892566e-5d04-4c09-b3c2-b31d077f6308" />
 
+$F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
+
+$F_{state}$ = 494.3926
+
+已知 $t_{state}$ = 22.2349 ， $t_{state}^2$ = 494.3926，故驗證t-stat的平方等於F
 
 ### d. 計算決定係數 $R^2$ 這個值對線性回歸模型的有效性提供了什麼資訊？
 
@@ -19,4 +27,4 @@ $R^2 = \frac{SSR}{SS_{Total}}$
 
 $R^2 = \frac{0.1812}{0.1864} \approx 0.972103 = 97.21%$  
 
-The $R^2$ value indicates that 97.21% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
+$R^2$ =0.9721 表示這個線性回歸模型解釋了 97% 的總變異
