--- a/HW1207/21_徐偉峻/CH12.03_Q07.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q07.md
@@ -1,2 +1,8 @@
 # CH12.03_Q07 #
 
+<img width="438" alt="CH12 03_Q07" src="https://github.com/user-attachments/assets/38ac3a72-d967-46ad-a3b6-9bb5e87e00ef" />
+
+
+Coefficient of Determination: Use the data to calculate the coefficient of determination, r^2. What information does this value give about the usefulness of the linear model?
+
+
