--- a/HW1207/21_徐偉峻/CH12.03_Q07.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q07.md
@@ -10,6 +10,6 @@ Coefficient of Determination: Use the data to calculate the coefficient of deter
 | y |  1 |  1 | 3 | 5 | 5 |
 
 
-$r^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ = $\frac{10^2}{16 /cdot 12}$ = 0.9
+$r^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ = $\frac{10^2}{16 \cdot 12}$ = 0.9
 
 $r^2$ =0.9 表示這個線性回歸模型解釋了 90% 的總變異
