--- a/HW1207/21_徐偉峻/CH12.03_Q09.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q09.md
@@ -1,2 +1,27 @@
 # CH12.03_Q09 #
 
+<img width="439" alt="CH12 03_Q09" src="https://github.com/user-attachments/assets/9a024394-85df-48d3-9ca8-6ffd8c8a0853" />
+
+
+Lots of Highways: The number of miles of U.S. urban roadways (millions of miles) for the years 2000-2015 is reported below.
+The years are simplified as years 0 through 15.
+
+| Miles of Roadways (millions) | 0.85 | 0.88 | 0.89 | 0.94 | 0.98 | 1.01 | 1.03 | 1.04 |
+|:----------------------------:|------|------|------|------|------|------|------|------|
+| Year - 2000                  | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    |
+
+| Miles of Roadways (millions) | 1.07 | 1.08 | 1.09 | 1.10 | 1.11 | 1.18 | 1.20 | 1.21 |
+|:----------------------------:|------|------|------|------|------|------|------|------|
+| Year - 2000                  | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   |
+
+
+a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see.
+
+b. Find the least-squares line describing these data. Do the data indicate that there is a linear relationship between he number of miles of roadways and the year? Test using a t statistic with $\alpha$ = .05.
+
+c. Construct the ANOVA table and use the F statistic to answer the question in part b. Verify that the square of the t statistic in part b is equal to F.
+
+
+d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
+
+
