--- a/HW1207/18_張睿廷/CH12.03_Q10.md
+++ b/HW1207/18_張睿廷/CH12.03_Q10.md
@@ -1,1 +1,1 @@
-![image](https://github.com/user-attachments/assets/1dbf3372-c5f0-4a52-a38d-90d5cbfc39df)
+<img width="315" alt="image" src="https://github.com/user-attachments/assets/b2d3f691-f472-4409-892d-67229719f0b5" />
