--- a/HW1207/18_張睿廷/CH12.03_Q10.md
+++ b/HW1207/18_張睿廷/CH12.03_Q10.md
@@ -1,1 +1,12 @@
 <img width="315" alt="image" src="https://github.com/user-attachments/assets/b2d3f691-f472-4409-892d-67229719f0b5" />
+
+### 題意：再犯率
+再犯率指的是已被釋放或假釋的犯人再次被送回監獄的現象。以下數據顯示聯邦監獄中釋放犯人的組別中位年齡（𝑥）及被逮捕再犯的百分比（𝑦）。請利用 MS Excel 的輸出結果回答下列問題。
+
+### a.求出描述「被捕百分比」與「群體年齡中位數」之間關係的least-squares line。
+
+### b.資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準下進行檢定。
+
+### c.建構斜率的 95% 信賴區間
+
+### d.計算決定係數( $R^2$ )，並說明其統計意涵。
