--- a/HW1207/21_徐偉峻/CH12.03_Q10.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q10.md
@@ -1,2 +1,15 @@
 # CH12.03_Q10 #
 
+<img width="467" alt="CH12 03_Q10-1" src="https://github.com/user-attachments/assets/9046ae59-ea59-49a2-b2e9-dc7525840a54" />
+
+<img width="443" alt="CH12 03_Q10-2" src="https://github.com/user-attachments/assets/f0d08747-df9e-4539-968e-b91d0f643c12" />
+
+Recidivism refers to the return to prison of a prisoner who has been released or paroled. The data that follow reports the group median age at which a prisoner was released from a federal prison and the percentage of those arrested for another crime. Use the MS Excel printout to answer the questions that follow.
+
+a. Find the least-squares line relating the percentage arrested to the group median age.
+
+b. Do the data provide sufficient evidence to indicate that x and y are linearly related? Test using the t statistic at the 5% level of significance.
+
+c. Construct a 95% confidence interval for the slope of the line.
+
+d. Find the coefficient of determination and interpret its significance.
