--- a/HW1207/21_徐偉峻/CH12.03_Q10.md
+++ b/HW1207/21_徐偉峻/CH12.03_Q10.md
@@ -8,8 +8,30 @@ Recidivism refers to the return to prison of a prisoner who has been released or
 
 a. Find the least-squares line relating the percentage arrested to the group median age.
 
+根據表格得知 least-squares line: y = 93.617 - 1.251x
+
 b. Do the data provide sufficient evidence to indicate that x and y are linearly related? Test using the t statistic at the 5% level of significance.
+
+$H_0$ : b = 0
+
+$H_a$ : b $\ne$ 0
+
+使用 P-value 檢定斜率b 的顯著性，
+
+因P-value = 0 < $\alpha$ = 0.025，故拒絕 $H_0$ ，即有顯著證據證明x和y有線性關係
 
 c. Construct a 95% confidence interval for the slope of the line.
 
+由表格知，95%信賴區間下界為 -1.559
+
+又 信賴區間下界 = -1.251 - t * $\sqrt{\frac{MSE}{S_{xx}}}$ = -1.559
+
+知  t * $\sqrt{\frac{MSE}{S_{xx}}}$ =   (-1.251) -(-1.559) = 0.308 ，知信賴區間 上界為 -1.251 + 0.308 = -0.943
+
+故知信賴區間上下界為 [-1.559 , -0.943]
+
+
 d. Find the coefficient of determination and interpret its significance.
+
+由題目知 $R^2$ = 0.9564 ，表示模型解釋了 95.64% 的變異
+
