--- a/HW1207/21_徐偉峻/CH12.05_Q03.05.md
+++ b/HW1207/21_徐偉峻/CH12.05_Q03.05.md
@@ -1,2 +1,6 @@
 # CH12.05_Q03.05 #
 
+<img width="435" alt="CH12 05_Q03 05" src="https://github.com/user-attachments/assets/41f3508e-6b69-4fcb-99ed-4c14603cc5dc" />
+
+Confidence Intervals for the Average Value of y Use the information given to find a confidence interval for the average value of y when x = $x_0$.
+
