--- a/HW1207/21_徐偉峻/CH12.05_Q03.05.md
+++ b/HW1207/21_徐偉峻/CH12.05_Q03.05.md
@@ -2,5 +2,13 @@
 
 <img width="435" alt="CH12 05_Q03 05" src="https://github.com/user-attachments/assets/41f3508e-6b69-4fcb-99ed-4c14603cc5dc" />
 
-Confidence Intervals for the Average Value of y Use the information given to find a confidence interval for the average value of y when x = $x_0$.
+Confidence Intervals for the Average Value of y: Use the information given to find a confidence interval for the average value of y when x = $x_0$.
 
+Q03.
+
+
+
+Prediction Intervals for a Particular Value of y: Use the information given (reproduced below) to find a prediction interval for a particular value of y
+when x = $x_0$. Is the interval wider than the corresponding confidence interval from Exercises 3-4?
+
+Q05.
