--- a/HW1207/21_徐偉峻/CH12.05_Q07.08.md
+++ b/HW1207/21_徐偉峻/CH12.05_Q07.08.md
@@ -1,2 +1,10 @@
 # CH12.05_Q07.08 #
 
+<img width="440" alt="CH12 05_Q07 08" src="https://github.com/user-attachments/assets/dfad4ce4-e3e9-4e6d-a533-a73e0315a44a" />
+
+Data Set I Use the data set below to answer the questions in Exercises 7-8.
+
+7. Estimate the average value of y when x = 1, using a 90% confidence interval.
+
+
+8. Find a 90% prediction interval for some value of y to be observed in the future when x = 1.
