--- a/HW1207/21_徐偉峻/CH12.05_Q07.08.md
+++ b/HW1207/21_徐偉峻/CH12.05_Q07.08.md
@@ -11,4 +11,24 @@ Data Set I Use the data set below to answer the questions in Exercises 7-8.
 7. Estimate the average value of y when x = 1, using a 90% confidence interval.
 
 
+當 $x_0$ = 1時， $\hat{y_0}$ = 4.2
+
+信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+
+Sxx = 10，1/n=0.2， $(x_0-\bar{x})^2$ = 1，MSE=0.5333
+
+= 4.2 $\pm$ 2.353 * $\sqrt{(0.5333 *(1/5+1/10) )}$ =4.2 $\pm$ 0.9412
+
+信賴區間為 [3.2588 , 5.1412 ]
+
 8. Find a 90% prediction interval for some value of y to be observed in the future when x = 1.
+
+當 $x_0$ = 1時， $\hat{y_0}$ = 4.2
+
+預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+
+Sxx = 10，1/n=0.2， $(x_0-\bar{x})^2$ = 1，MSE=0.5333
+
+= 4.2 $\pm$ 2.353 * $\sqrt{(0.5333 *(1+1/5+1/10) )}$ = 4.2 $\pm$ 1.9592
+
+預測區間為 [2.2408 , 6.1592 ]
