--- a/HW1207/21_徐偉峻/CH12.05_Q09.10.md
+++ b/HW1207/21_徐偉峻/CH12.05_Q09.10.md
@@ -1,2 +1,10 @@
 # CH12.05_Q09.10 #
 
+<img width="463" alt="CH12 05_Q09 10-1" src="https://github.com/user-attachments/assets/2e337817-b727-4f8c-82ea-35641ebb16fc" />
+
+<img width="442" alt="CH12 05_Q09 10-2" src="https://github.com/user-attachments/assets/c7259024-f95a-49d3-995d-27ee950b2b8e" />
+
+9. Find a 95% confidence interval for the average value of y when x = 2.
+
+
+10. Find a 95% prediction interval for some value of y to be observed in the future when x = 2.
