--- a/HW1207/21_徐偉峻/CH12.05_Q09.10.md
+++ b/HW1207/21_徐偉峻/CH12.05_Q09.10.md
@@ -6,5 +6,12 @@
 
 9. Find a 95% confidence interval for the average value of y when x = 2.
 
+由題目知，x=2時 $\hat{y_0}$ = 4.88571
+
+95%信賴區間為 [4.60061,5.17081]
 
 10. Find a 95% prediction interval for some value of y to be observed in the future when x = 2.
+
+由題目知，x=2時 $\hat{y_0}$ = 4.88571
+
+95%預測區間為 [4.28856,5.48287]
