--- a/HW1207/18_張睿廷/CH12.03_Q10.md
+++ b/HW1207/18_張睿廷/CH12.03_Q10.md
@@ -7,13 +7,23 @@
 >
 ><img width="371" alt="image" src="https://github.com/user-attachments/assets/4c862d92-aefe-4b32-b12c-fed1860a62b0" />
 >
->根據題定的數據得出，截距: a = 93.617，斜率: b = -1.251，帶入 y=a+bx
+>根據題給的數據得出，截距: a = 93.617，斜率: b = -1.251，帶入 y=a+bx
 >
 >least-squares line: $\hat{y}$ = 93.617 - 1.251*x
 >
 ### b.資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準下進行檢定。
 >
+>$H_{0}: \beta = 0$  
+>$H_{1}: \beta \neq 0$
 >
+>$\alpha$=0.05
+>
+><img width="372" alt="image" src="https://github.com/user-attachments/assets/b9e307c1-7706-44ba-af45-37e73cc5e82b" />
+>
+>$t_{STAT}$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$。
+>
+><img width="230" alt="image" src="https://github.com/user-attachments/assets/52e51c7e-d78b-4613-a583-ea092da557cb" />
+
 ### c.建構斜率的 95% 信賴區間
 
 ### d.計算決定係數( $R^2$ )，並說明其統計意涵。
