--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -5,3 +5,27 @@
 ## a.
 
 ![CH12 03_Q09 figure](https://github.com/user-attachments/assets/8e88b924-a40d-4d31-842a-34a061f40882)
+
+## b.
+
+| $x$  | $y$    | $x^2$  | $y^2$    |
+|----|------|------|--------|
+| 0  | 0.85 | 0    | 0.7225 |
+| 1  | 0.88 | 1    | 0.7744 |
+| 2  | 0.89 | 4    | 0.7921 |
+| 3  | 0.94 | 9    | 0.8836 |
+| 4  | 0.98 | 16   | 0.9604 |
+| 5  | 1.01 | 25   | 1.0201 |
+| 6  | 1.03 | 36   | 1.0609 |
+| 7  | 1.04 | 49   | 1.0816 |
+| 8  | 1.07 | 64   | 1.1449 |
+| 9  | 1.08 | 81   | 1.1664 |
+| 10 | 1.09 | 100  | 1.1881 |
+| 11 | 1.10 | 121  | 1.21   |
+| 12 | 1.11 | 144  | 1.2321 |
+| 13 | 1.18 | 169  | 1.3924 |
+| 14 | 1.20 | 196  | 1.44   |
+| 15 | 1.21 | 225  | 1.4641 |
+|Sum|
+| 120  | 16.66 | 1240    | 17.5336 |
+
