--- a/HW1207/18_張睿廷/CH12.03_Q10.md
+++ b/HW1207/18_張睿廷/CH12.03_Q10.md
@@ -25,5 +25,22 @@
 ><img width="230" alt="image" src="https://github.com/user-attachments/assets/52e51c7e-d78b-4613-a583-ea092da557cb" />
 
 ### c.建構斜率的 95% 信賴區間
+>
+>$b \pm t_{(\alpha/2)} \sqrt{\frac{\text{MSE}}{S_{xx}}}$ , with $df$ = $n$ - 2 
+>
+>斜率 $b$= -1.251
+>  
+>$\text{MSE} = 9.999$
+>
+>$S_{xx} = \sum (x - \bar{x})^2 = \sum x^2 - \frac{(\sum x)^2}{n} = 700$
+>
+>
+>自由度 $n - 2$ = $7 - 2 = 5$
+>
+>t 值（95% 信賴水準， $\alpha = 0.05$）：查 t 分布表，當自由度 $5$ 時， $t_{0.025} \approx 2.571$
+>
+>$-1.251 \pm 2.571 \sqrt{\frac{9.999}{700}} = -1.251 \pm 0.3073$
+>
+>故知信賴區間上下界為 [-1.5583 , -0.9437]
 
 ### d.計算決定係數( $R^2$ )，並說明其統計意涵。
