--- a/HW1207/18_張睿廷/CH12.03_Q10.md
+++ b/HW1207/18_張睿廷/CH12.03_Q10.md
@@ -41,6 +41,10 @@
 >
 >$-1.251 \pm 2.571 \sqrt{\frac{9.999}{700}} = -1.251 \pm 0.3073$
 >
->故知信賴區間上下界為 [-1.5583 , -0.9437]
+>故信賴區間上下界為 [-1.5583 , -0.9437]
 
 ### d.計算決定係數( $R^2$ )，並說明其統計意涵。
+><img width="128" alt="image" src="https://github.com/user-attachments/assets/07fbc678-ae0d-4fa4-a1a7-2852c275234c" />
+>
+>由表中得知， $R^2$ = 95.64%，表示這個模型可以解釋 y 有 95.64% 的變化是由 x 所造成的。
+
