--- a/HW1207/08_蕭宇辰/CH12.01_Q17.md
+++ b/HW1207/08_蕭宇辰/CH12.01_Q17.md
@@ -15,7 +15,7 @@ $S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4+1+0+1+4 =10
 
 $S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
 
-b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
+b = $\frac{S_{xy}}{S_{xx}}$ = 12/10 = 1.2
 
 a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
 
