--- a/HW1109/13_陳峻毅/CH07.05_Q27.md
+++ b/HW1109/13_陳峻毅/CH07.05_Q27.md
@@ -1,49 +1,37 @@
 ![圖片](https://github.com/user-attachments/assets/bcd145f0-b732-4eb5-8c17-eb52997979fd)
 # Tossing Coins Problem
 
-A fair coin is tossed  n = 80  times. Let $\hat{p}\$ be the sample proportion of heads. We are tasked to find $P(0.44 < hat{p}< 0.61)$
+## 由題目得知：在一個丟硬幣的實驗中，進行了 𝑛=80 次投擲，令 $\hat{p}$ 是出現頭部的樣本比例。
 
-## Step-by-Step Solution
+## 找出在這些投擲中，樣本比例 𝑝 落在區間 0.44 < $\hat{p}$ < 0.61的機率。
 
-### 1. Define the problem
-- Tossing a fair coin n = 80 times.
-- The probability of heads for a fair coin isp = 0.5
-- We aim to calculate $P(0.44 < \hat{p} < 0.61$) 
+### X~Binomial (n=80 , p=0.5)
 
----
+### 1. P (0.44 < $\hat{p}$ < 0.61 ) 進行Z標準化
 
-### 2. Mean and standard deviation of the sample proportion
-- The mean of \( \hat{p} \):
-  $\mu_{\hat{p}} = p = 0.5\$
-- The standard deviation of $\hat{p}\$
-  $\sigma_{\hat{p}} = \sqrt{\frac{p(1-p)}{n}} = \sqrt{\frac{0.5(1-0.5)}{80}} = \sqrt{\frac{0.25}{80}} = \sqrt{0.003125} \approx 0.0559\$
+## 根據中央極限定理 $\frac{\hat{p}-p}{\sqrt{p \times q/n}} \rightarrow^d N ( 0,1)$
 
----
+>### $P (0.44 < \hat{p} < 0.61 )$
+>
+>### $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{\hat{p}-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$
+>
+>### $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < Z < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$
+>
+>### $= P ( -1.07 < Z < 1.96 )$
+>
+### 2. 查表
+>
+>### P ( Z < -1.07 ) = 0.1423
+>
+>### P ( Z < 1.96 ) = 0.975
+>
+>![image](https://github.com/user-attachments/assets/c30c6a23-7296-451e-babb-0d5f7d3b264b)
+>
+>![image](https://github.com/user-attachments/assets/8af90157-1236-410b-ab99-2e0f7e5d4d3b)
+>
+### 3. 結論
 
-### 3. Standardize using \( Z \)-scores
-- The \( Z \)-score formula:
-  $Z = \frac{\hat{p} - \mu_{\hat{p}}}{\sigma_{\hat{p}}}$
+>### $區間 0.44 < \hat{p} < 0.61 的機率為$
+>
+>### $P (0.44 < \hat{p} < 0.61 ) = 0.975 - 0.1423 = 0.8327$
 
-- For \( \hat{p} = 0.44 \):
-  $Z_1 = \frac{0.44 - 0.5}{0.0559} = \frac{-0.06}{0.0559} \approx -1.073$
-
-- For \( \hat{p} = 0.61 \):
-  $Z_2 = \frac{0.61 - 0.5}{0.0559} = \frac{0.11}{0.0559} \approx 1.967$
-  
-
----
-
-### 4. Find probabilities using the standard normal distribution
-- Using the standard normal table:
-  $P(Z < -1.073) \approx 0.1419$\
-  $P(Z < 1.967) \approx 0.9750$
-
-- Therefore:
-- $P(0.44 < \hat{p} < 0.61) = P(-1.073 < Z < 1.967)$
-  $P(-1.073 < Z < 1.967) = P(Z < 1.967) - P(Z < -1.073)$
-  $P(-1.073 < Z < 1.967) \approx 0.9750 - 0.1419 = 0.8331$
-
----
-
-### Final Answer
-$P(0.44 < \hat{p} < 0.61) \approx 0.8331$
