--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -8,24 +8,34 @@
 
 ## b.
 
-| $x$  | $y$    | $x^2$  | $y^2$    |
-|----|------|------|--------|
-| 0  | 0.85 | 0    | 0.7225 |
-| 1  | 0.88 | 1    | 0.7744 |
-| 2  | 0.89 | 4    | 0.7921 |
-| 3  | 0.94 | 9    | 0.8836 |
-| 4  | 0.98 | 16   | 0.9604 |
-| 5  | 1.01 | 25   | 1.0201 |
-| 6  | 1.03 | 36   | 1.0609 |
-| 7  | 1.04 | 49   | 1.0816 |
-| 8  | 1.07 | 64   | 1.1449 |
-| 9  | 1.08 | 81   | 1.1664 |
-| 10 | 1.09 | 100  | 1.1881 |
-| 11 | 1.10 | 121  | 1.21   |
-| 12 | 1.11 | 144  | 1.2321 |
-| 13 | 1.18 | 169  | 1.3924 |
-| 14 | 1.20 | 196  | 1.44   |
-| 15 | 1.21 | 225  | 1.4641 |
+| $x$ | $y$    | $x^2$  | $y^2$    | $({x_i}-\bar{x})^2$   | $({y_i}-\bar{y})^2$         | $({x_i}-\bar{x})({y_i}-\bar{y})$      |
+|----|------|------|--------|-------|-------------|----------|
+| 0  | 0.85 | 0    | 0.7225 | 56.25 | 0.0365765625 | 1.434375 |
+| 1  | 0.88 | 1    | 0.7744 | 42.25 | 0.0260015625 | 1.048125 |
+| 2  | 0.89 | 4    | 0.7921 | 30.25 | 0.0228765625 | 0.831875 |
+| 3  | 0.94 | 9    | 0.8836 | 20.25 | 0.0102515625 | 0.455625 |
+| 4  | 0.98 | 16   | 0.9604 | 12.25 | 0.0037515625 | 0.214375 |
+| 5  | 1.01 | 25   | 1.0201 | 6.25  | 0.0009765625 | 0.078125 |
+| 6  | 1.03 | 36   | 1.0609 | 2.25  | 0.0001265625 | 0.016875 |
+| 7  | 1.04 | 49   | 1.0816 | 0.25  | 0.0000015625 | 0.000625 |
+| 8  | 1.07 | 64   | 1.1449 | 0.25  | 0.0008265625 | 0.014375 |
+| 9  | 1.08 | 81   | 1.1664 | 2.25  | 0.0015015625 | 0.058125 |
+| 10 | 1.09 | 100  | 1.1881 | 6.25  | 0.0023765625 | 0.121875 |
+| 11 | 1.10 | 121  | 1.21   | 12.25 | 0.0034515625 | 0.205625 |
+| 12 | 1.11 | 144  | 1.2321 | 20.25 | 0.0047265625 | 0.309375 |
+| 13 | 1.18 | 169  | 1.3924 | 30.25 | 0.0192515625 | 0.763125 |
+| 14 | 1.20 | 196  | 1.44   | 42.25 | 0.0252015625 | 1.031875 |
+| 15 | 1.21 | 225  | 1.4641 | 56.25 | 0.0284765625 | 1.265625 |
 |Sum|
-| 120  | 16.66 | 1240    | 17.5336 |
+| 120  | 16.66 | 1240 | 17.5336 |340|0.186375|7.85|
+|Average|
+|7.5|1.04125|||
 
+$S_{xx} =\Sigma({x_i}-\bar{x})^2$ = 340 
+$S_{yy} =\Sigma({y_i}-\bar{y})^2$ = 0.186375 
+$S_{xy} =\Sigma({x_i}-\bar{x})({y_i}-\bar{y})$ = 7.85
+
+b = $frac{S_{xy}}{S_{xx}}$ = 7.85/340 $\approx$ 0.0231  
+a = $\bar{y}-b\bar{x}$ = 1.04125 - b $\times 7.5 \approx$ 0.8681 
+
+Regression line: $\hat{y} = 0.8681 + 0.0231x$
