--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -35,7 +35,7 @@ $S_{xx} =\Sigma({x_i}-\bar{x})^2$ = 340
 $S_{yy} =\Sigma({y_i}-\bar{y})^2$ = 0.186375 
 $S_{xy} =\Sigma({x_i}-\bar{x})({y_i}-\bar{y})$ = 7.85
 
-b = $frac{S_{xy}}{S_{xx}}$ = 7.85/340 $\approx$ 0.0231  
+b = $\frac{S_{xy}}{S_{xx}}$ = 7.85/340 $\approx$ 0.0231  
 a = $\bar{y}-b\bar{x}$ = 1.04125 - b $\times 7.5 \approx$ 0.8681 
 
 Regression line: $\hat{y} = 0.8681 + 0.0231x$
