--- a/HW1123/HW1123Q06.md
+++ b/HW1123/HW1123Q06.md
@@ -58,6 +58,6 @@ b. $\alpha$ = 0.05, Z = 1.645 (查表得知)
 
 c. The test statstic is $Z_{\text{STAT}} = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} = \frac{0.6 - 0.5}{\sqrt{\frac{0.5 \cdot 0.5}{120}}} = 2.191$     
 
-d. 因為Z的統計檢定量未落在Rejection Region，所以拒絕虛無假設 $H_{0}$，有直接證據證明 p > .5 。 
+d. 因為Z的統計檢定量落在Rejection Region，所以拒絕虛無假設 $H_{0}$，有直接證據證明 p > .5 。 
 
 reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
