--- a/HW1207/18_張睿廷/CH12.05_Q03.05.md
+++ b/HW1207/18_張睿廷/CH12.05_Q03.05.md
@@ -1,1 +1,4 @@
 ![image](https://github.com/user-attachments/assets/217c69c2-bd0a-4cd6-8039-a14d6c280c79)
+
+![IMG_0343](https://github.com/user-attachments/assets/84bd5426-08bd-4206-b831-5706b19e6496)
+
