--- a/HW1207/18_張睿廷/CH12.05_Q07.08.md
+++ b/HW1207/18_張睿廷/CH12.05_Q07.08.md
@@ -1,1 +1,3 @@
 ![image](https://github.com/user-attachments/assets/5ae37dc1-943f-4756-9016-64b11b0ed3a2)
+
+![IMG_0344](https://github.com/user-attachments/assets/17cd318a-f070-41a4-bd3c-794ccbe4ef8b)
