--- a/HW1207/HW1207Q10.md
+++ b/HW1207/HW1207Q10.md
@@ -1,1 +1,51 @@
+學號 IOF112035 張睿廷
 
+<img width="315" alt="image" src="https://github.com/user-attachments/assets/b2d3f691-f472-4409-892d-67229719f0b5" />
+
+### 題意：再犯率
+再犯率指的是已被釋放或假釋的犯人再次被送回監獄的現象。以下數據顯示聯邦監獄中釋放犯人的組別中位年齡（𝑥）及被逮捕再犯的百分比（𝑦）。請利用 MS Excel 的輸出結果回答下列問題。
+
+### a.求出描述「被捕百分比」與「群體年齡中位數」之間關係的least-squares line。
+>
+><img width="371" alt="image" src="https://github.com/user-attachments/assets/4c862d92-aefe-4b32-b12c-fed1860a62b0" />
+>
+>根據題給的數據得出，截距: a = 93.617，斜率: b = -1.251，帶入 y=a+bx
+>
+>least-squares line: $\hat{y}$ = 93.617 - 1.251*x
+>
+### b.資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準下進行檢定。
+>
+>$H_{0}: \beta = 0$  
+>$H_{1}: \beta \neq 0$
+>
+>$\alpha$=0.05
+>
+><img width="372" alt="image" src="https://github.com/user-attachments/assets/b9e307c1-7706-44ba-af45-37e73cc5e82b" />
+>
+>$t_{STAT}$ = 20.436 > 2.571，落入拒絕域，因此拒絕 $H_{0}$。
+>
+><img width="230" alt="image" src="https://github.com/user-attachments/assets/52e51c7e-d78b-4613-a583-ea092da557cb" />
+
+### c.建構斜率的 95% 信賴區間
+>
+>$b \pm t_{(\alpha/2)} \sqrt{\frac{\text{MSE}}{S_{xx}}}$ , with $df$ = $n$ - 2 
+>
+>斜率 $b$= -1.251
+>  
+>$\text{MSE} = 9.999$
+>
+>$S_{xx} = \sum (x - \bar{x})^2 = \sum x^2 - \frac{(\sum x)^2}{n} = 700$
+>
+>
+>自由度 $n - 2$ = $7 - 2 = 5$
+>
+>t 值（95% 信賴水準， $\alpha = 0.05$）：查 t 分布表，當自由度 $5$ 時， $t_{0.025} \approx 2.571$
+>
+>$-1.251 \pm 2.571 \sqrt{\frac{9.999}{700}} = -1.251 \pm 0.3073$
+>
+>故信賴區間上下界為 [-1.5583 , -0.9437]
+
+### d.計算決定係數( $R^2$ )，並說明其統計意涵。
+><img width="128" alt="image" src="https://github.com/user-attachments/assets/07fbc678-ae0d-4fa4-a1a7-2852c275234c" />
+>
+>由表中得知， $R^2$ = 95.64%，表示這個模型可以解釋 y 有 95.64% 的變化是由 x 所造成的。
