--- a/HW1109/13_陳峻毅/CH08.03_Q09.md
+++ b/HW1109/13_陳峻毅/CH08.03_Q09.md
@@ -58,3 +58,20 @@ The **95% confidence interval** for the population mean $\mu\$ is:
 ## **Interpretation**
 
 We are 95% confident that the true population mean $\mu\$ lies between **12.475** and **13.725**.
+
+
+解法二:
+
+因母體為未知分配，但因抽樣數夠大 n>30 ，欲進行點估計 $$\bar{x}$$ 可利用中央極限定理計算樞紐量 
+
+$$\frac{\bar{x}-\mu}{\frac{s}{\sqrt{n}}}$$ -> N (0,1) by CLT 
+
+故知 $$\mu$$ 的 95%信賴區間為 
+
+[ $$\bar{x}-z_{0.025}\frac{s}{\sqrt{n}}$$ , $$\bar{x}+z_{0.025}\frac{s}{\sqrt{n}}$$
+
+= [12.4959 , 13.7041]
+
+故知 在95%的信心水準下，平均數的信賴區間為  [ 12.4959 , 13.7041 ] 
+
+(如果多次重複抽樣並計算信賴區間，這些區間中有 95% 會包含真實的母體均值)
