--- a/HW1207/HW1207Q08.md
+++ b/HW1207/HW1207Q08.md
@@ -1,3 +1,13 @@
 徐守平
 
 ![image](https://github.com/user-attachments/assets/3d2dec73-b202-4c46-9fe0-f8737d1c8c9f)
+
+$\bar{x}$=0
+
+$\bar{Y}$=3
+
+$S_{xx} =(-2-0)^2+(-1-0)^2+(0-0)^2+(1-0)^2+(2-0)^2=10$  
+
+$S_{yy} =(1-3)^2+(1-3)^2+(3-3)^2+(5-3)^2+(5-3)^2=16$    
+
+$S_{xy} = (-2*-2)+(-1*-2)+(0*0)+(1*2)+(2*2) = 12$  
