--- a/HW1207/HW1207Q08.md
+++ b/HW1207/HW1207Q08.md
@@ -12,3 +12,11 @@ $S_{yy} =(1-3)^2+(1-3)^2+(3-3)^2+(5-3)^2+(5-3)^2=16$
 
 $S_{xy}=(-2\times-2)+(-1\times-2)+(0\times0)+(1\times2)+(2\times2)=12$
 
+Total SS = $S_{yy}$ = 16  
+
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{12^2}{10} = 14.4$  
+
+$R^2 =\frac{SSR}{Total SS}$  
+
+$R^2 = \frac{14.4}{16} = 0.9 = 90%$  
+
