--- a/HW1207/HW1207Q08.md
+++ b/HW1207/HW1207Q08.md
@@ -20,3 +20,4 @@ $R^2 =\frac{SSR}{Total SS}$
 
 $R^2 = \frac{14.4}{16} = 0.9 = 90%$  
 
+## R2的定義代表迴歸模式之變異值與所有yi變異量之比例，R2愈大，代表此迴歸模式能夠解釋全體yi變異量的比例愈大。因此R2愈接近1.0，代表此模式愈有解釋能力。
