--- a/HW1123/09_沈佩如/CH09.02_Q11-13.md
+++ b/HW1123/09_沈佩如/CH09.02_Q11-13.md
@@ -10,13 +10,13 @@
 >
 >![image](https://github.com/user-attachments/assets/4e410ad9-76e7-416b-9901-95483f55cbce)
 
-## 題目12：雙尾檢定（two-tailed test），α=-2.78
+## 題目12：雙尾檢定（two-tailed test），z=-2.78
 >
 >查表標準常態分配
 >
 >![image](https://github.com/user-attachments/assets/ec35e01b-ff7d-4561-92d6-11d768504996)
 
-## 題目13：左尾檢定（left-tailed test），α=-1.81
+## 題目13：左尾檢定（left-tailed test），z=-1.81
 >
 >查表標準常態分配中，單尾檢定 α=0.02/2 所對應的 z 值。
 >
