--- a/HW1207/06_陳嘉祥/CH12.01_Q17.md
+++ b/HW1207/06_陳嘉祥/CH12.01_Q17.md
@@ -4,4 +4,29 @@ Title: HW1207_06_Titan(陳嘉祥)
 
 ![CH12 01_Q17](https://github.com/user-attachments/assets/5ea75e49-f018-4341-bc25-f7dc28e2be5b)
 
-3. $S_{yy} = \sum y_i^2 - \frac{(\sum y_i)^2}{n}$
+||  $x$  |  $y$  | $x^2$ | $y^2$ |  $xy$ |
+|-------|-------|-------|-------|-------|-------|
+|1|-2|1|4|1|-2|
+|2|-1|1|1|1|-1|
+|3|0|3|0|9|0|
+|4|1|5|1|25|5|
+|5|2|5|4|25|10|
+|Total|0|15|10|61|12|
+| AVG |0|3|  |  |  |
+
+
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 10 - 5 \times 0 = 10$  
+
+$S_{yy} = \sum{{y_{i}}^2} - n\bar{y}^2$  
+$S_{yy} = 61 - 5 \times 9 = 16$  
+
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
+$S_{xy} = 12 - 5 \times 0 \times 3 = 12$  
+
+$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$  
+$a = \bar{y} - b \times \bar{x} = 3 - 1.2 \times 0 = 3$  
+
+Best fitting line: $\hat{y} = a + bx = 3 + 1.2x$
+
+![image](https://github.com/user-attachments/assets/56067f39-794e-4794-b0c4-19cb0e253591)
