--- a/HW1123/09_沈佩如/CH09.02_Q25.md
+++ b/HW1123/09_沈佩如/CH09.02_Q25.md
@@ -4,9 +4,7 @@
 
 ## 一個藥品製造商聲稱其某抗生素的平均效能為80%。隨機抽取了 n = 100顆膠囊進行測試，結果得到樣本平均值 x = 79.7%，標準差 s = 0.8%。這些數據是否提供足夠的證據來駁斥製造商的聲明？顯著水準 α = 0.05。
 
-## a. 設定要檢驗的 H₀
-
-## b. 設定對立假設
+## a. 設定要檢驗的 H₀  b. 設定對立假設
 
 ## C. 進行假設檢定，並陳述結論
 >
