--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -32,10 +32,50 @@
 |7.5|1.04125|||
 
 $S_{xx} =\Sigma({x_i}-\bar{x})^2$ = 340  
-$S_{yy} =\Sigma({y_i}-\bar{y})^2$ = 0.186375  
+$S_{yy} =\Sigma({y_i}-\bar{y})^2$ = 0.186375 $\approx$ 0.1864  
 $S_{xy} =\Sigma({x_i}-\bar{x})({y_i}-\bar{y})$ = 7.85
 
 b = $\frac{S_{xy}}{S_{xx}}$ = 7.85/340 $\approx$ 0.0231  
 a = $\bar{y}-b\bar{x}$ = 1.04125 - 7.85/340 $\times 7.5 \approx$ 0.8681 
 
 Regression line: $\hat{y} = 0.8681 + 0.0231x$
+
+Check whether there is a linear relationship in the data:  
+$H_0$ : $\beta$ = 0
+
+$H_a$ : $\beta$ $\ne$ 0
+
+Because $\alpha$ = 0.05, RR = {t: t $\le$ -2.145 or t $\ge$ 2.145  }
+
+![image](https://github.com/user-attachments/assets/76125aa0-aa8b-42bc-8d5b-e7466d9e0970)
+
+$t_{STAT}=\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+
+$t^*$ = $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$ = $\frac{( 0.0231-0)}{\sqrt{\frac{0.0004}{340}}}$ = 21.2971
+
+( Total SS = 0.1864， SSR = $\frac{{S_{xy}}^2}{S_{xx}} = \frac{7.85\times7.85}{340} \approx$ 0.1812 ，SSE = Total SS-SSR = 0.0052， MSE= SSE /(n-2) = 0.0052 / 14 $\approx$ 0.0004 )
+
+$t^*$ is in the rejection region, so we reject $H_0$ which means we have sufficient proof to indicate that there is liner relationship between the datas. 
+
+
+## c.
+
+|       | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Reg   | 1     | 0.1812  | 0.1812  |
+| Error | 14     | 0.0052 |0.0004  |
+| Tatol | 15     | 0.1864 |
+
+$F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
+
+$F^*$ = 0.1812/0.0004 = 453
+
+with t* = 21.2971 ， ${t*}^2$ = 453.5665
+
+$F^* \approx t*^2$
+
+
+## d. 
+---
+
+$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725
