--- a/HW1207/06_陳嘉祥/CH12.01_Q17.md
+++ b/HW1207/06_陳嘉祥/CH12.01_Q17.md
@@ -14,19 +14,14 @@ Title: HW1207_06_Titan(陳嘉祥)
 |	Total	|	0	|	15	|	10	|	61	|	12	|
 |	 AVG 	|	0	|	3	|	  	|	  	|	  	|
 
-
-
-$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
-$S_{xx} = 10 - 5 \times 0 = 10$  
-
-$S_{yy} = \sum{{y_{i}}^2} - n\bar{y}^2$  
-$S_{yy} = 61 - 5 \times 9 = 16$  
-
-$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
-$S_{xy} = 12 - 5 \times 0 \times 3 = 12$  
-
-$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$  
-$a = \bar{y} - b \times \bar{x} = 3 - 1.2 \times 0 = 3$  
+0. $\bar{x} = \frac{\sum x}{n} = \frac{-2 - 1 + 0 + 1 + 2}{5} = 0$
+1. $\bar{y} = \frac{\sum x}{n} = \frac{1 + 1 + 3 + 5 + 5}{5} = 3$
+2. $S_{xx} = \sum x_i^2 - \frac{(\sum x_i)^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
+3. $S_{xy} = \sum x_i y_i - \frac{\sum x_i \sum y_i}{n} = 12 - \frac{0 \times 15}{5} = 12 $
+4. $S_{yy} = \sum y_i^2 - \frac{(\sum y_i)^2}{n} = 61 - \frac{(15)^2}{5} = 16 $
+5. $b = \frac{S_{xy}}{S_{xx}}=\frac{12}{10}=1.2 $  
+6. $a = \bar{y} - b\bar{x} = 3 - (1.2 \times 0) = 3 $ 
+7. $\hat{y} = 3 + 1.2x$
 
 Best fitting line: $\hat{y} = a + bx = 3 + 1.2x$
 
