--- a/HW1207/06_陳嘉祥/CH12.02_Q04.md
+++ b/HW1207/06_陳嘉祥/CH12.02_Q04.md
@@ -4,3 +4,8 @@ Title: HW1207_06_Titan(陳嘉祥)
 
 ![CH12 02_Q04](https://github.com/user-attachments/assets/ad96372b-5285-42b5-a41a-af5fef603ce0)
 
+|	 Source      	|	 Degrees of Freedom 	|	 Sum of Squares 	|	 Mean Square      	|	 F-statistic 	|
+|	-------------	|	--------------------	|	----------------	|	------------------	|	-------------	|
+|	 Regression  	|	1	|	  SSR = 4.3	|	4.3	|	9.4381	|
+|	 Error       	|	18	|	  SSE = 8.2	|	0.4556	|		|
+|	 Total       	|	19	|	  SST = 12.5	|		|		|
