--- a/HW1207/HW1207Q09.md
+++ b/HW1207/HW1207Q09.md
@@ -78,4 +78,10 @@ $F^* \approx t*^2$
 ## d. 
 ---
 
-$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725
+$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725 = 97.25%
+
+$R^2$ measures the proportion of the total variation in the response
+that can be explained by using the explanatory
+variable x in the model.
+Ch12. page40.
+
