--- a/HW1207/10_蔡佳媛/CH12.03_Q05_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q05_10_Cathy.md
@@ -26,7 +26,7 @@ SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{12^2}{10} = 14.4$
 
 SSE = Total SS - SSR = $16 - 14.4 = 1.6$
 
-MSE = $\frac{MSE}{n-2} = \frac{1.6}{3} = 0.5333$
+MSE = $\frac{SSE}{n-2} = \frac{1.6}{3} = 0.5333$
 
 
 ### Do the data provide sufficient evidence to indicate that $y$ and $x$ are linearly related? Test using the $t$ statistic at the 1% level of significance. Construct a 99% interval for the slope of the line. What does the phrase "99% confident" mean?  
