--- a/HW1109/15_林秀鴻/CH07.05_Q28.md
+++ b/HW1109/15_林秀鴻/CH07.05_Q28.md
@@ -14,6 +14,6 @@ p = the portion of players born outside the U.S. = 0.7
 Sample mean = $\hat{p} = 0.7$
 Standard deviation = $\sqrt{\frac{pq}{n}} = \sqrt{\frac{0.7 \times 0.3}{50}} = \sqrt{0.0042} \approx 0.0648$  
 
-$P(\hat{p} \gt 0.8) = 1 - P( z \lt \frac{0.8-0.7}{0.0648} \approx 1 - P( z \lt 1.54) = 1 - 0.9382 = 0.0618$
+$P(\hat{p} \gt 0.8) = 1 - P( z \lt \frac{0.8-0.7}{0.0648}) \approx 1 - P( z \lt 1.54) = 1 - 0.9382 = 0.0618$
 
 ![image](https://github.com/user-attachments/assets/9642b530-9c1d-4ee0-b7b4-99045ae4c0c7)
