--- a/HW1109/15_林秀鴻/CH07.05_Q31.md
+++ b/HW1109/15_林秀鴻/CH07.05_Q31.md
@@ -16,7 +16,7 @@ Therefore, the distribution of $\hat{p}$ have an approximate normal distribution
 $X \sim Bernoulli(n=100, p=0.47), \mu = 0.47, \sigma^2 = pq = 0.47 \times 0.53 = 0.2491$
 
 $mean =\mu = p = 0.47$  
-$var(\bar{X_{100}} = \frac{\sigma^2}{n} = \frac{pq}{n} = \frac{0.2491}{100} = 0.002491$  
+$var(\bar{X_{100}}) = \frac{\sigma^2}{n} = \frac{pq}{n} = \frac{0.2491}{100} = 0.002491$  
 standard deviation = $\sqrt{0.02491} \approx 0.0499$
 
 b. $\hat{p}$ 小於 0.45 的機率是多少？
