--- a/HW1207/11_黃德榮/CH12.01_Q17.md
+++ b/HW1207/11_黃德榮/CH12.01_Q17.md
@@ -1,3 +1,20 @@
 ![image](https://github.com/user-attachments/assets/ff77d7f2-92b1-406c-931a-85925855688e)
 
+$$
+S_{xx} := \sum (x_i - \bar{x})^2 = \sum (x_i^2 - 2\bar{x}x_i + \bar{x}^2) 
+= \sum x_i^2 - 2\bar{x}(n\bar{x}) + n\bar{x}^2 = \sum x_i^2 - n\bar{x}^2
+$$
 
+$$
+S_{yy} := \sum (y_i - \bar{y})^2 = \sum (y_i^2 - 2\bar{y}y_i + \bar{y}^2) 
+= \sum y_i^2 - 2\bar{y}(n\bar{y}) + n\bar{y}^2 = \sum y_i^2 - n\bar{y}^2
+$$
+
+$$
+S_{xy} := \sum (x_i - \bar{x})(y_i - \bar{y}) = \sum (x_iy_i - \bar{x}y_i - \bar{y}x_i + \bar{x}\bar{y}) 
+= \sum x_iy_i - \bar{x}(n\bar{y}) - \bar{y}(n\bar{x}) + n\bar{x}\bar{y} = \sum x_iy_i - n\bar{x}\bar{y}
+$$
+						
+![image](https://github.com/user-attachments/assets/cc4905c1-242e-4999-893b-0339817d50cc)
+
+![image](https://github.com/user-attachments/assets/e8426ead-a80b-4da2-af09-2cbab310dc96)
