--- a/HW1123/06_陳嘉祥/CH10.02_Q20.md
+++ b/HW1123/06_陳嘉祥/CH10.02_Q20.md
@@ -17,7 +17,7 @@ $$H_a$$ : $$\mu\ne$$ 74 (雙尾檢定)
 
 基於顯著水準 α=0.05，雙尾檢定為 : α/2=0.025，自由度 =24， $$t_{24,0.025} $$ ， 查t分配表得到 :  $$t_{24,0.025} $$ = 2.064
 
-t-test : t = | $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$ |  = | $$\frac{69.7 - 74}{16/\sqrt{25}} $$ | = 1.3438 > 2.064 。    
+t-test : t = | $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$ |  = | $$\frac{69.7 - 74}{16/\sqrt{25}} $$ | = 1.3438 < 2.064 。    
 
 因為t檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
 
