--- a/HW1207/13_陳峻毅/CH12.02_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.02_Q10.md
@@ -11,6 +11,15 @@
 
 根據計算，最小平方迴歸線為：
 $\hat{y} = 32.91 - 0.148x$
+
+## (c) 計算SS
+SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22\
+$MS_{regression} = \frac{SS_{regression}}{df_{regression}} = \sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
+$MS_{error} = \frac{SS_{error}}{df_{error}} =  SST - SSR = 72.22-59.4417 = 12.7783$
+  
+MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417\
+MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
+
 ---
 ## (c) ANOVA 表
 
@@ -20,19 +29,11 @@ $\hat{y} = 32.91 - 0.148x$
 | Error       | 4    | 12.78 | 3.195  |
 | Total       | 5    | 72.22 | —      |
 ---
+## (d) 計算coefficient of determination: 
+
+$R^2= \frac{SSR}{Total SS}=\frac{59.44}{72.22}$
+$R^2=0.823
+This model is woking well!
+
 ## 解釋
-
-1. **迴歸平方和 ($SS_{regression}$)**：
-   $SS_{regression} = 59.44$，表示由收入解釋的 BMI 變異量。
-2. **誤差平方和 ($SS_{error}$)**：
-   $SS_{error} = 12.78$，表示由迴歸模型無法解釋的 BMI 變異量。
-3. **總平方和 ($SS_{total}$)**：
-   $SS_{total} = 72.22$，表示 BMI 的總變異量。
-
-### 均方 ($MS$)
-- 迴歸均方：
-  $MS_{regression} = \frac{SS_{regression}}{df_{regression}} = 59.44$
-- 誤差均方：
-  $MS_{error} = \frac{SS_{error}}{df_{error}} = 3.195$
-
 此模型表明收入對 BMI 具有一定的解釋能力，但仍存在其他可能影響 BMI 的因素。
