--- a/HW1207/13_陳峻毅/CH12.02_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.02_Q10.md
@@ -29,7 +29,7 @@ MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
 | Error       | 4    | 12.78 | 3.195  |
 | Total       | 5    | 72.22 | —      |
 ---
-## (d) 計算coefficient of determination: 
+## (d) 計算coefficient of determination  (題目未問): 
 
 $R^2= \frac{SSR}{Total SS}=\frac{59.44}{72.22}$
 $R^2=0.823
