--- a/HW1207/13_陳峻毅/CH12.02_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.02_Q10.md
@@ -31,8 +31,10 @@ MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
 ---
 ## (d) 計算coefficient of determination  (題目未問): 
 
-$R^2= \frac{SSR}{Total SS}=\frac{59.44}{72.22}$
-$R^2=0.823
+$R^2= \frac{SSR}{Total SS}=\frac{59.44}{72.22}=0.823$
+
+當 $R^2$ 越接近1 反映了自變數（收入）能夠解釋因變數（BMI）變異的比例。
+
 This model is woking well!
 
 ## 解釋
