--- a/HW1207/HW1207Q05.md
+++ b/HW1207/HW1207Q05.md
@@ -1,1 +1,42 @@
+![393916822-6ee099f5-2d72-41d0-932d-eb255bfe5385](https://github.com/user-attachments/assets/174bda0f-5361-4170-9fd9-c75b2e7c09eb)
+
+# Body Mass Index (BMI) 與收入的迴歸分析
+
+## (a) 獨立變數與因變數
+如果研究者認為 BMI 是收入的函數，則：
+- **獨立變數 ($x$)**：收入 (Income)
+- **因變數 ($y$)**：BMI
+---
+## (b) 最小平方迴歸方程式
+
+根據計算，最小平方迴歸線為：
+$\hat{y} = 32.91 - 0.148x$
+
+## (c) 計算SS
+SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22\
+$MS_{regression} = \frac{SS_{regression}}{df_{regression}} = \sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
+$MS_{error} = \frac{SS_{error}}{df_{error}} =  SST - SSR = 72.22-59.4417 = 12.7783$
+  
+MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417\
+MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
+
+---
+## (d) ANOVA 表
+
+| Source      | $df$ | $SS$  | $MS$   |
+|-------------|------|-------|--------|
+| Regression  | 1    | 59.44 | 59.44  |
+| Error       | 4    | 12.78 | 3.195  |
+| Total       | 5    | 72.22 | —      |
+---
+## (e) 計算coefficient of determination  (題目未問): 
+
+$R^2= \frac{SSR}{Total SS}=\frac{59.44}{72.22}=0.823$
+
+當 $R^2$ 越接近1 反映了自變數（收入）能夠解釋因變數（BMI）變異的比例。
+
+This model is woking well!
+
+## 解釋
+此模型表明收入對 BMI 具有一定的解釋能力，但仍存在其他可能影響 BMI 的因素。
 
