--- a/HW1207/HW1207Q05.md
+++ b/HW1207/HW1207Q05.md
@@ -1,3 +1,4 @@
+學號：513717030  陳峻毅
 ![393916822-6ee099f5-2d72-41d0-932d-eb255bfe5385](https://github.com/user-attachments/assets/174bda0f-5361-4170-9fd9-c75b2e7c09eb)
 
 # Body Mass Index (BMI) 與收入的迴歸分析
@@ -13,11 +14,14 @@
 $\hat{y} = 32.91 - 0.148x$
 
 ## (c) 計算SS
-SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22\
+SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22
+
 $MS_{regression} = \frac{SS_{regression}}{df_{regression}} = \sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
+
 $MS_{error} = \frac{SS_{error}}{df_{error}} =  SST - SSR = 72.22-59.4417 = 12.7783$
   
-MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417\
+MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417
+
 MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
 
 ---
