--- a/HW1207/11_黃德榮/CH12.02_Q04.md
+++ b/HW1207/11_黃德榮/CH12.02_Q04.md
@@ -1,1 +1,8 @@
+![image](https://github.com/user-attachments/assets/6c7fde5d-98ca-4cdc-afa0-9a58bd5cf295)
+
+![image](https://github.com/user-attachments/assets/2611f2cd-e7ba-4f3b-bacd-d36edf79bf56)
+
+ans:
+
+![image](https://github.com/user-attachments/assets/6ef5509e-51e8-47a8-ba80-0989602d77e4)
 
