--- a/HW1207/11_黃德榮/CH12.02_Q06.md
+++ b/HW1207/11_黃德榮/CH12.02_Q06.md
@@ -1,1 +1,5 @@
+![image](https://github.com/user-attachments/assets/e4c95d10-27ff-4aec-8cab-f12d8ad6ea3f)
 
+ans
+					
+![image](https://github.com/user-attachments/assets/10447e64-7cac-43f6-8aaf-a92a8a79f63e)
