--- a/HW1109/10_蔡佳媛/CH07.05_Q31_10_Cathy.md
+++ b/HW1109/10_蔡佳媛/CH07.05_Q31_10_Cathy.md
@@ -37,7 +37,7 @@ $P(0.42 \lt \hat{p} \lt 0.45) \stackrel{z}\sim  P( \frac{0.42-0.47}{0.0499} \lt 
 
 ### d. What might you conclude about $p$ if the observed sample proportion were less than 0.30?
 
-$P(\hat{p} \lt 0.30) \stackrel{z}\sim P( z \lt \frac{0.30-0.47}{0.0499}) = P( z \lt -3.40) \approx 0$
+$P(\hat{p} \lt 0.30) \stackrel{z}\sim P( z \lt \frac{0.30-0.47}{0.0499}) = P( z \lt -3.40) = 0.0003$
 
 The probability of observing a z-score less than -3.40 is extremely small. 
 If the observed sample proportion were less than 0.30, it would be reasonable to conclude that the true population proportion ($p$) is likely different from 0.47.  
