--- a/HW1207/HW1207Q07.md
+++ b/HW1207/HW1207Q07.md
@@ -12,21 +12,27 @@
 
 用t檢定檢定資料是否存在線性關係
 ---
-$H_0$ : b = 0
+$H_0$ : $\beta$ = 0
 
-$H_a$ : b $\ne$ 0
+$H_a$ : $\beta$ $\ne$ 0
 
-因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+set $\alpha$ = 0.01 
 
-且 $\alpha$ = 0.01
+$t_{STAT}$= $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
 
-RR = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
+經查表 Text book page 692. Table 4: Critical Values of t
+
+df=3 , $t_{0.005}$=5.841
+
+Rejection Region = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
 
 計算統計量
 
+( TotalSS = $S_{yy}$ =16， SSR = $S_{xy}^2$ / $S_{xx}$ = 14.4 ，SSE = TotalSS-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
+
 $t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
 
-( SST = 16， SSR = 14.4 ，SSE = SST-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
+
 
 統計量並未落在拒絕域中，故我們不拒絕虛無假設，即無充分證據證明 X和 Y有線性關係
 
@@ -34,7 +40,7 @@ $t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\f
 建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
 ---
 
-99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
+99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}}$ with df=n-2=3
 
 信賴區間為 [1.2- 0.2309*5.84 , 1.2+0.2309*5.84 ] = [-0.1485, 2.5485]
 
