--- a/HW1207/HW1207Q07.md
+++ b/HW1207/HW1207Q07.md
@@ -30,7 +30,7 @@ Rejection Region = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
 
 ( TotalSS = $S_{yy}$ =16， SSR = $S_{xy}^2$ / $S_{xx}$ = 14.4 ，SSE = TotalSS-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
 
-$t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
+$t^*$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
 
 
 
