--- a/HW1207/15_林秀鴻/CH12.01_Q17.md
+++ b/HW1207/15_林秀鴻/CH12.01_Q17.md
@@ -1,1 +1,25 @@
+![CH12 01_Q17](https://github.com/user-attachments/assets/a60ced1c-29fd-42be-981b-b1c08fb930e5)
 
+
+---
+
+X=-2 -1  0  1  2
+
+Y= 1  1  3  5  5
+
+$\bar{x}$ = 0
+
+$\bar{y}$ = 3
+
+$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4+1+0+1+4 =10
+
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
+
+b = $\frac{S_{xy}}{S_{xx}}$ = 12/10 = 1.2
+
+a= $\bar{y}-b*\bar{x}$ = 3 - 1.2 * 0 = 3
+
+帶入y=a+bx後，故知，least-squares line 是 $\hat{y}$ =3 + 1.2 *x ，並繪圖如下
+
+![image](https://github.com/user-attachments/assets/1a2c6af1-d73e-497c-9685-1138d224e94a)
+Yes, it's good fit to the LSL.
