--- a/HW1207/15_林秀鴻/CH12.02_Q04.md
+++ b/HW1207/15_林秀鴻/CH12.02_Q04.md
@@ -1,1 +1,15 @@
 
+![CH12 02_Q04](https://github.com/user-attachments/assets/3a1dccbb-228c-4002-8e08-7be08090dfb7)
+
+在簡單線性回歸分析中，根據方差分析表（ANOVA），填入缺失的項目，按題意填入缺失項：
+---
+
+$df_{reg}$ = 1 (因為簡單線性迴歸僅有一個解釋變數，因此自由度為1)
+
+$df_{error}$ = 19-1 =18
+
+SSE = 12.5-4.3 = 8.2
+
+MSR = SSR / $df_{reg}$ = 4.3 / 1 =4.3
+
+MSE = SSE / $df_{error}$ = 8.2 / 18  =  0.4556
