--- a/HW1207/15_林秀鴻/CH12.03_Q09.md
+++ b/HW1207/15_林秀鴻/CH12.03_Q09.md
@@ -1,1 +1,63 @@
+![CH12 03_Q09](https://github.com/user-attachments/assets/56d7d994-66b4-4bf1-a91e-d7cb2e2036c0)
+
+a. 繪製道路里程與時間（年）之間的散佈圖，描述你所看到的趨勢。
+---
+
+![image](https://github.com/user-attachments/assets/ba0c3bc1-b2fe-476d-a53b-88b2dc2d7a85)
+
+散佈圖顯示道路里程與年份之間呈現明顯的線性增長趨勢。
+
+b. 求出描述這組數據的最小平方法直線。檢驗數據是否顯示出「道路里程數量與年份之間具有線性關係」，使用 t-統計量並設定顯著水準 α=0.05。
+---
+
+整理資料如下
+
+![image](https://github.com/user-attachments/assets/0887cce3-7e3d-4be4-9e77-bf792df89bc1)
+
+求得 least-squares line : $\hat{y} = 0.8681+ 0.0231*x$
+
+並檢定資料是否存在線性關係
+
+$H_0$ : b = 0
+
+$H_a$ : b $\ne$ 0
+
+因 $\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+
+且 $\alpha$ = 0.05
+
+RR = {t: t $\le$ -2.145 or t $\ge$ 2.145  }
+
+計算統計量
+
+$t_{stat}$ = $(b-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = ( 0.0231-0) / $\sqrt{\frac{0.0004}{340}}$ = 22.2349
+
+( SST = 0.1864， SSR = 0.1812 ，SSE = SST-SSR =0.0052， MSE= SSE /(n-2) = 0.0052 / 14 = 0.0004 )
+
+統計量落在拒絕域中，故我們拒絕虛無假設，即有充分證據證明 X和 Y存在線性關係
+
+
+c. 建構 ANOVA 表格，並使用 F-統計量來回答問題 b。驗證 t-stat的平方是否等於 F。
+---
+
+|       | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Reg   | 1     | 0.1812  | 0.1812  |
+| Error | 14     | 0.0052 |0.0004  |
+| Tatol | 15     | 0.1864 |
+
+$F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
+
+$F_{state}$ = 494.3926
+
+已知 $t_{state}$ = 22.2349 ， $t_{state}^2$ = 494.3926，故驗證t-stat的平方等於F
+
+
+d. 計算決定係數 $R^2$ 。這個值對線性回歸模型的有效性提供了什麼資訊？
+---
+
+$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725
+
+$R^2$ =0.9725 表示這個線性回歸模型解釋了 97% 的總變異
+
 
