--- a/HW1207/19_黃家鈞/CH12.01_Q17.md
+++ b/HW1207/19_黃家鈞/CH12.01_Q17.md
@@ -1,1 +1,25 @@
+# CH12.01_Q17 #
 
+<img width="428" alt="CH12 01_Q17" src="https://github.com/user-attachments/assets/227c4085-8b18-4250-9020-00afda9c1408" />
+
+Calculate the sums of squares and cross-products, $S_{xx}$ and $S_{xy}$. Find the least-squares line for the data. Plot the points and graph the line on the same graph. Does the line appear to provide a good fit to the data points?
+
+| X | -2 | -1 | 0 | 1 | 2 |
+|:-:|:--:|:--:|:-:|:-:|:-:|
+| y |  1 |  1 | 3 | 5 | 5 |
+
+$\bar{x}$ = $\frac{-2 - 1 + 0 + 1 + 2}{5}$ = 0
+
+$\bar{y}$ = $\frac{1 + 1 + 3 + 5 + 5}{5}$ = 3
+
+$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 4 + 1 + 0 + 1 + 4 = 10
+
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 4 + 2 + 0 + 2 + 4 = 12
+
+The least-squares line: y = a + bx 
+
+b = $\frac{S_{xx}}{S_{xy}}$ = 12/10 = 1.2
+
+a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 3 - 1.2 $\cdot$ 0 = 3
+
+y = 3 + 1.2x
