--- a/HW1207/15_林秀鴻/CH12.05_Q05-06.md
+++ b/HW1207/15_林秀鴻/CH12.05_Q05-06.md
@@ -1,1 +1,26 @@
+![CH12 05_Q03_Q05](https://github.com/user-attachments/assets/7b7da61a-4571-4a5d-ae8e-117596d0db73)
 
+3.
+
+當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
+
+信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+
+Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+
+= 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1/10+0.81/48.9) )}$ =2.374 $\pm$ 1.0999
+
+信賴區間為 [1.2741 , 3.4739 ]
+
+
+5.
+
+當 $x_0$ = 5時， $\hat{y_0}$ = 2.374
+
+預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
+
+Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+
+= 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1+1/10+0.81/48.9) )}$ =2.374 $\pm$ 3.404
+
+預測區間為 [-1.0302 , 5.7782 ]
