--- a/HW1207/19_黃家鈞/CH12.02_Q06.md
+++ b/HW1207/19_黃家鈞/CH12.02_Q06.md
@@ -1,1 +1,34 @@
+# CH12.02_Q06 #
 
+<img width="441" alt="CH12 02_Q06" src="https://github.com/user-attachments/assets/1411830f-5ca4-4fe2-87f0-15e631c96ae6" />
+
+Method of Least Squares
+
+Use the data given. Construct the ANOVA table for a simple linear regression analysis, showing the sources, degrees of freedom, sums of squares, and mean squares.
+
+| x | -2 | -1 | 0 | 1 | 2 |
+|:-:|:--:|:--:|:-:|:-:|:-:|
+| y | 1  | 1  | 3 | 5 | 5 |
+
+|       | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Reg   | 1     | 14.4  | 14.4  |
+| Error | 3     | 1.6 | 0.5333 |
+| Tatol | 4     | 16 |
+
+
+$df_{reg}$ = 1
+
+$df_{error}$ = n-k = 3
+
+$df_{total}$ = n-1 = 4
+   
+SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 61 - 15*15/5 = 16
+
+SSR =  $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4 - $15^2$ / 5 = 14.4
+
+SSE = SST - SSR = 1.6
+
+MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4
+
+MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
