--- a/HW1207/19_黃家鈞/CH12.02_Q10.md
+++ b/HW1207/19_黃家鈞/CH12.02_Q10.md
@@ -1,1 +1,51 @@
+# CH12.02_Q10 #
 
+<img width="446" alt="CH12 02_Q10" src="https://github.com/user-attachments/assets/62f4a5dc-aff4-4840-bb93-7c0bc8540a49" />
+
+Body Mass Index: A study using body mass index (BMI) - an index of obesity - as a function of income ($ thousands) reported the following data for California in 2016.
+
+
+| Income |  15  | 20.5 |  30  |	 40  |  60  |  75  |
+|:------:|:----:|:----:|:----:|:----:|:----:|:----:|
+| BMI    | 31.2 | 29.3 | 27.4 | 27.3 | 26.8 | 20.0 |
+
+a. If the researcher thinks that BMI is a function of income, which of the two variables is the independent variable x and which is the dependent variable y?
+
+Income is the independent variable x and BMI is the dependent variable y.
+
+b. Find tje least-squares line relating BMI to income?
+
+$S_{xx}$ = 2730.208 and $S_{xy}$ = -402.85 
+
+The least-squares line: y = a + bx 
+
+b = $\frac{S_{xx}}{S_{xy}}$ = -0.1476
+
+a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 32.9144 
+
+y = 32.9144 - 0.1476x
+
+
+c. Construct the ANOVA table for the linear regression.
+
+|       | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Reg   | 1     | 59.4417  | 59.4417  |
+| Error | 4     | 12.7783 |3.1946  |
+| Tatol | 5     | 72.22 |
+
+$df_{reg}$ = 1
+
+$df_{error}$ = n-k = 4
+
+$df_{total}$ = n-1 = 5
+   
+SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22
+
+SSR = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
+
+SSE = SST - SSR = 72.22-59.4417 = 12.7783
+
+MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417
+
+MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
