--- a/HW1207/19_黃家鈞/CH12.03_Q05.md
+++ b/HW1207/19_黃家鈞/CH12.03_Q05.md
@@ -1,1 +1,55 @@
+# CH12.03_Q05 #
 
+<img width="428" alt="CH12 03_Q05" src="https://github.com/user-attachments/assets/11168fe9-dcbb-46ac-b662-623354366268" />
+
+Testing the Slope of the Line: Use the data given. Do the data provide sufficient evidence to indicate that y and x are linearly related? Test using the t statistic at the 1% level of significance. Construct a 99% confidence interval for the slope of the line. What does the phrase "99% confident" mean?
+
+| x | -2 | -1 | 0 | 1 | 2 |
+|:-:|:--:|:--:|:-:|:-:|:-:|
+| y | 1  | 1  | 3 | 5 | 5 |
+
+$\bar{x}$ = $\frac{-2 - 1 + 0 + 1 + 2}{5}$ = 0
+
+$\bar{y}$ = $\frac{1 + 1 + 3 + 5 + 5}{5}$ = 3
+
+$S_{xx}$ = $\sum{(x_i-\bar{x})^2}$ = 10
+
+$S_{xy}$ = $\sum{(x_i-\bar{x})(y_i-\bar{y})}$ = 12
+
+$S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ = 16
+
+The least-squares line: y = a + bx 
+
+b = $\frac{S_{xx}}{S_{xy}}$ = 10/12 = 1.2
+
+a = $\bar{y}$ - b $\cdot$ $\bar{x}$ = 3
+
+y = 3 + 1.2x
+
+Test using the t statistic at the 1% level of significance.
+
+$H_0$ : b = 0
+
+$H_a$ : b $\ne$ 0
+
+$\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+
+$\alpha$ = 0.01
+
+RR = {t: t $\le$ -5.841 or t $\ge$ 5.841  }
+
+
+$t_{stat}$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0.5333}{10}}$ = 1.2 / 0.2309 = 5.1963
+
+( SST = 16， SSR = 14.4 ，SSE = SST-SSR =1.6， MSE= SSE /(n-2) = 1.6 / 3 = 0.5333 )
+
+統計量並未落在拒絕域中，故我們不拒絕虛無假設，即無充分證據證明 X和 Y有線性關係
+
+
+What does the phrase "99% confident" mean?
+
+99%信賴區間為 b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}} $ 
+
+信賴區間為 [1.2- 0.2309*5.84 , 1.2+0.2309*5.84 ] = [-0.1485, 2.5485]
+
+即重複抽樣的情況下，有99%的機率此區間包含真實的斜率值
