--- a/HW1207/19_黃家鈞/CH12.03_Q07.md
+++ b/HW1207/19_黃家鈞/CH12.03_Q07.md
@@ -1,1 +1,15 @@
+# CH12.03_Q07 #
 
+<img width="438" alt="CH12 03_Q07" src="https://github.com/user-attachments/assets/38ac3a72-d967-46ad-a3b6-9bb5e87e00ef" />
+
+
+Coefficient of Determination: Use the data to calculate the coefficient of determination, $r^2$. What information does this value give about the usefulness of the linear model?
+
+| X | -2 | -1 | 0 | 1 | 2 |
+|:-:|:--:|:--:|:-:|:-:|:-:|
+| y |  1 |  1 | 3 | 5 | 5 |
+
+
+$r^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ = $\frac{10^2}{16 \cdot 12}$ = 0.9
+
+$r^2$ =0.9 表示這個線性回歸模型解釋了 90% 的總變異
