--- a/HW1207/19_黃家鈞/CH12.03_Q09.md
+++ b/HW1207/19_黃家鈞/CH12.03_Q09.md
@@ -1,1 +1,64 @@
+# CH12.03_Q09 #
 
+<img width="439" alt="CH12 03_Q09" src="https://github.com/user-attachments/assets/9a024394-85df-48d3-9ca8-6ffd8c8a0853" />
+
+
+Lots of Highways: The number of miles of U.S. urban roadways (millions of miles) for the years 2000-2015 is reported below.
+The years are simplified as years 0 through 15.
+
+| Miles of Roadways (millions) | 0.85 | 0.88 | 0.89 | 0.94 | 0.98 | 1.01 | 1.03 | 1.04 |
+|:----------------------------:|------|------|------|------|------|------|------|------|
+| Year - 2000                  | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    |
+
+| Miles of Roadways (millions) | 1.07 | 1.08 | 1.09 | 1.10 | 1.11 | 1.18 | 1.20 | 1.21 |
+|:----------------------------:|------|------|------|------|------|------|------|------|
+| Year - 2000                  | 8    | 9    | 10   | 11   | 12   | 13   | 14   | 15   |
+
+
+a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see.
+
+b. Find the least-squares line describing these data. Do the data indicate that there is a linear relationship between he number of miles of roadways and the year? Test using a t statistic with $\alpha$ = .05.
+
+
+least-squares line : y = 0.8681 + 0.0231x
+
+$H_0$ : b = 0
+
+$H_a$ : b $\ne$ 0
+
+$\frac{(b-0)}{\sqrt{\frac{MSE}{S_{xx}}}}$  ~ t(n-2)
+
+$\alpha$ = 0.05
+
+RR = {t: t $\le$ -2.145 or t $\ge$ 2.145  }
+
+$t_{stat}$ = $(b-0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = ( 0.0231-0) / $\sqrt{\frac{0.0004}{340}}$ = 22.2349
+
+( SST = 0.1864， SSR = 0.1812 ，SSE = SST-SSR =0.0052， MSE= SSE /(n-2) = 0.0052 / 14 = 0.0004 )
+
+統計量落在拒絕域中，故我們拒絕虛無假設，即有充分證據證明 X和 Y存在線性關係
+
+
+c. Construct the ANOVA table and use the F statistic to answer the question in part b. Verify that the square of the t statistic in part b is equal to F.
+
+
+|       | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Reg   | 1     | 0.1812  | 0.1812  |
+| Error | 14     | 0.0052 |0.0004  |
+| Tatol | 15     | 0.1864 |
+
+$F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
+
+$F_{state}$ = 494.3926
+
+已知 $t_{state}$ = 22.2349 ， $t_{state}^2$ = 494.3926，故驗證t-stat的平方等於F
+
+
+d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
+
+
+
+$R^2$ = $\frac{S_{xy}^2}{S_{xx}S_{yy}}$ =  = 0.9725
+
+$R^2$ =0.9725 表示這個線性回歸模型解釋了 97% 的總變異
