--- a/HW1207/19_黃家鈞/CH12.05_Q09.10.md
+++ b/HW1207/19_黃家鈞/CH12.05_Q09.10.md
@@ -1,1 +1,17 @@
+# CH12.05_Q09.10 #
 
+<img width="463" alt="CH12 05_Q09 10-1" src="https://github.com/user-attachments/assets/2e337817-b727-4f8c-82ea-35641ebb16fc" />
+
+<img width="442" alt="CH12 05_Q09 10-2" src="https://github.com/user-attachments/assets/c7259024-f95a-49d3-995d-27ee950b2b8e" />
+
+9. Find a 95% confidence interval for the average value of y when x = 2.
+
+由題目知，x=2時 $\hat{y_0}$ = 4.88571
+
+95%信賴區間為 [4.60061,5.17081]
+
+10. Find a 95% prediction interval for some value of y to be observed in the future when x = 2.
+
+由題目知，x=2時 $\hat{y_0}$ = 4.88571
+
+95%預測區間為 [4.28856,5.48287]
