--- a/HW1207/HW1207Q07.md
+++ b/HW1207/HW1207Q07.md
@@ -34,7 +34,7 @@ $t^*$ = $(\hat{b}-b_0)$ / $\sqrt{\frac{MSE}{S_{xx}}}$ = (1.2-0) / $\sqrt{\frac{0
 
 
 
-統計量並未落在拒絕域中，故我們不拒絕虛無假設，即無充分證據證明 X和 Y有線性關係
+統計量並未落在拒絕域中，故我們不拒絕 $H_0$，即無充分證據證明 X和 Y有線性關係
 
 
 建構回歸斜率的 99% 信賴區間。解釋「99% 信心水準」的含義。
