--- a/HW1207/19_黃家鈞/CH12.02_Q06.md
+++ b/HW1207/19_黃家鈞/CH12.02_Q06.md
@@ -19,7 +19,7 @@ Use the data given. Construct the ANOVA table for a simple linear regression ana
 
 $df_{reg}$ = 1
 
-$df_{error}$ = n-k = 3
+$df_{error}$ = n-1-1 = 3
 
 $df_{total}$ = n-1 = 4
    
