--- a/HW1207/19_黃家鈞/CH12.02_Q10.md
+++ b/HW1207/19_黃家鈞/CH12.02_Q10.md
@@ -36,7 +36,7 @@ c. Construct the ANOVA table for the linear regression.
 
 $df_{reg}$ = 1
 
-$df_{error}$ = n-k = 4
+$df_{error}$ = n-1-1 = 4
 
 $df_{total}$ = n-1 = 5
    
