--- a/HW1207/11_黃德榮/CH12.02_Q10.md
+++ b/HW1207/11_黃德榮/CH12.02_Q10.md
@@ -8,3 +8,11 @@ BMI = Y
 
 b. 
 
+![image](https://github.com/user-attachments/assets/5f36bb01-c43c-4b46-b4eb-8d9ef72daee8)
+
+![image](https://github.com/user-attachments/assets/30ec721f-bf6e-4454-a711-113b43aefd7f)
+
+c.
+
+![image](https://github.com/user-attachments/assets/f74a003b-6279-44db-8ee5-fe6be3939b8f)
+
