--- a/HW1207/15_林秀鴻/CH12.03_Q10.md
+++ b/HW1207/15_林秀鴻/CH12.03_Q10.md
@@ -1,39 +1,60 @@
-![image](https://github.com/user-attachments/assets/36830694-680c-4f74-841d-34b6eb191a5c)
+![394344648-36830694-680c-4f74-841d-34b6eb191a5c](https://github.com/user-attachments/assets/b2db2d80-ce52-4d20-aaac-a055d22ec1c5)
+![394326896-69f29ed3-0d16-4215-b1ff-11b9a7570823](https://github.com/user-attachments/assets/155ae30e-6dda-496f-9fbf-04c1bc8ce87d)
 
+### a. 找出最小平方法回歸線
+回歸線的方程為：
+$\hat{y} = a + bx$
+由表格中的係數可得：
+- 截距 (a) = 93.617
+- 斜率 (b) = -1.251
 
-![CH12 03_Q10](https://github.com/user-attachments/assets/69f29ed3-0d16-4215-b1ff-11b9a7570823)
+因此，回歸線方程為：
+$\hat{y} = 93.617 - 1.251x$
 
-a. 求出描述「被捕百分比」與「群體年齡中位數」之間關係的least-squares line。
 ---
+### b. 檢定 x 和 y 是否有線性關係
+假設檢定：
+- $H_0: \beta = 0$（無線性關係）
+- $H_a: \beta \neq 0$（有線性關係）
 
-根據表格得知 least-squares line: $\hat{y}$ = 93.617 - 1.251*x
+檢定統計量：\
+$t_{stat} = \frac{\text{估計的斜率} \, (\text{b})}{\sqrt{\frac{MSE}{S_{xx}}}}$ = $\frac{-1.251}{0.120} = -10.471$
 
+- 自由度 (df) = 7 - 2 = 5 
+- P -值：表格中已給出為 0.000 
 
-b. 資料是否提供充分證據顯示 x 和 y 存在線性關係？使用 t-統計量並在 5% 顯著水準 下進行檢定。
+結論：在顯著性水平 $\alpha = 0.05$ 下，因為 P < 0.05，拒絕 $H_0$。結果表明 x 和 y 存在顯著的線性關係。
+
 ---
+### c. 建立斜率的 95% 信賴區間
+斜率 ($b_1$) 的信賴區間計算公式：
+$t_{\alpha / 2}$ * $\sqrt{\frac{MSE}{S_{xx}}}$
 
-欲檢定x和y是否有線性關係
 
-$H_0$ : b = 0
+其中：
+- b = -1.251
+- $SE = 0.120$
+- t*：根據自由度 df = 5 和 95% 信心水準，查 t-表得 $t_{\alpha / 2}$* $\approx 2.571$
 
-$H_a$ : b $\ne$ 0
 
-使用 P-value 檢定斜率b 的顯著性，
+代入公式：\
+b $\pm t_{\alpha / 2} * \sqrt{\frac{MSE}{S_{xx}}}$ \
+$\text{下限} = -1.251 - (2.571 \cdot 0.120) = -1.559$\
+$\text{上限} = -1.251 + (2.571 \cdot 0.120) = -0.943$
 
-因P-value = 0 < $\alpha$ = 0.025，故拒絕 $H_0$ ，即有顯著證據證明x和y有線性關係
+因此，95% 信賴區間為：
+[-1.559, -0.943]
 
-c. 建構斜率的 95% 信賴區間。
 ---
+### d. 解釋決定係數 ($R^2$)
+表格中的 $R^2$ 值為：
+$R^2 = 0.9564$
 
-由表格知，95%信賴區間下界為 -1.559
+解釋：$R^2$ 表示模型可以解釋 $95.64\%$ 的數據變異性。這說明回歸模型的解釋力非常強，絕大多數的 y 變異可以由 x 解釋。
 
-又 信賴區間下界 = -1.251 - t * $\sqrt{\frac{MSE}{S_{xx}}}$ = -1.559
-
-知  t * $\sqrt{\frac{MSE}{S_{xx}}}$ =   (-1.251) -(-1.559) = 0.308 ，知信賴區間 上界為 -1.251 + 0.308 = -0.943
-
-故知信賴區間上下界為 [-1.559 , -0.943]
-
-d. 計算決定係數 $R^2$，並解釋其意義。
 ---
-
-由題目知 $R^2$ = 0.9564 ，表示模型解釋了 95.64% 的變異
+### 總結
+1. 回歸線方程為 y = 93.617 - 1.251x。
+2. 根據 t 檢定和 P 值，證明 x 和 y 之間存在顯著的線性關係。
+3. 斜率的 95% 信賴區間為 [-1.559, -0.943]。
+4. 決定係數 $R^2$ = 0.9564，表明模型具有非常高的解釋力。
