--- a/HW1207/11_黃德榮/CH12.03_Q05.md
+++ b/HW1207/11_黃德榮/CH12.03_Q05.md
@@ -1,13 +1,14 @@
 ![image](https://github.com/user-attachments/assets/6e3ce6ec-c26a-44ee-994a-4a63c2d542d3)
-		
-![image](https://github.com/user-attachments/assets/6e4f14f5-1a3c-498e-b318-7e922fd23038)
+					
+![image](https://github.com/user-attachments/assets/0402fbf1-8ccf-40a0-aa9b-8fac29ea2a09)
+
 
 ![image](https://github.com/user-attachments/assets/930fdaca-a038-461e-8fb7-de9b9601e612)
 
-t = 6
+t = 5.1962
 
 t > 5.841
 
-reject H0
+not reject H0
 
-model is useful in explaining the response variable
+model is not useful in explaining the response variable
