--- a/HW1207/15_林秀鴻/CH12.05_Q03-05.md
+++ b/HW1207/15_林秀鴻/CH12.05_Q03-05.md
@@ -6,7 +6,7 @@
 
 信賴區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
 
-Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+Sxx = 397- $59^2$ /10 =  48.9，1/n=0.1， $(x_0-\bar{x})^2$ = $(5-5.9)^2$ = 0.81，SSE=24，MSE=SSE/(n-2) = 3
 
 = 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1/10+0.81/48.9) )}$ =2.374 $\pm$ 1.0999
 
@@ -19,7 +19,7 @@ Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
 
 預測區間為 $\hat{y_0} \pm t_{(n-2),\frac{\alpha}{2}} * \sqrt{MSE(1+\frac{1}{n}+\frac{(x_0-\bar{x})^2}{S_{xx}})} $ 
 
-Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=3
+Sxx = 48.9，1/n=0.1， $(x_0-\bar{x})^2$ = 0.81，SSE=24，MSE=SSE/(n-2) = 3
 
 = 2.374 $\pm$ 1.86 * $\sqrt{(3 *(1+1/10+0.81/48.9) )}$ =2.374 $\pm$ 3.404
 
