--- a/HW1207/15_林秀鴻/CH12.05_Q07-08.md
+++ b/HW1207/15_林秀鴻/CH12.05_Q07-08.md
@@ -6,6 +6,7 @@
 
 
 7.
+$\hat{y_0}$ = 3+1.2 $x_0$
 
 當 $x_0$ = 1時， $\hat{y_0}$ = 4.2
 
@@ -19,6 +20,7 @@ Sxx = 10，1/n=0.2， $(x_0-\bar{x})^2$ = 1，MSE=0.5333
 
 
 8.
+$\hat{y_0}$ = 3+1.2 $x_0$
 
 當 $x_0$ = 1時， $\hat{y_0}$ = 4.2
 
