--- a/HW1207/11_黃德榮/CH12.03_Q09.md
+++ b/HW1207/11_黃德榮/CH12.03_Q09.md
@@ -1,1 +1,21 @@
+![image](https://github.com/user-attachments/assets/08c3c0b7-e613-49b9-91ed-201dbdac8fd5)
+
+a.
+![image](https://github.com/user-attachments/assets/15116024-519e-4215-b2aa-1fb92512a48c)
+
+b. 			
+![image](https://github.com/user-attachments/assets/1e4da6da-b757-4d75-80e6-b2dc5c4d04f9)
+
+H0: b is equal to 0
+H1: b is not equal to 0
+
+alpha = 0.05
+
+RR: t<-2.947 or t>2.947
+
+![image](https://github.com/user-attachments/assets/b2cae4aa-65db-4ea8-a0a7-648b93f17c1a)
+
+t = 22.23 > 2.947
+
+reject H0, model is useful to explain response variable
 
