--- a/HW1207/11_黃德榮/CH12.03_Q09.md
+++ b/HW1207/11_黃德榮/CH12.03_Q09.md
@@ -19,3 +19,23 @@ t = 22.23 > 2.947
 
 reject H0, model is useful to explain response variable
 
+c. 
+
+|       | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Reg   | 1     | 0.1812  | 0.1812  |
+| Error | 14     | 0.0052 |0.0004  |
+| Tatol | 15     | 0.1864 |
+
+$F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
+
+$F_{state}$ = 494.3926
+
+已知 $t_{state}$ = 22.2349 ， $t_{state}^2$ = 494.3926，故驗證t-stat的平方等於F
+
+d. 
+
+R^2 = SSR/total SS
+
+![image](https://github.com/user-attachments/assets/b62eee07-1aa6-4bf7-b333-bc78f01099d2)
+
