--- a/HW1207/11_黃德榮/CH12.03_Q09.md
+++ b/HW1207/11_黃德榮/CH12.03_Q09.md
@@ -25,7 +25,7 @@ c.
 | ----  | --    | -- | -- |
 | Reg   | 1     | 0.1812  | 0.1812  |
 | Error | 14     | 0.0052 |0.0004  |
-| Tatol | 15     | 0.1864 |
+| Total | 15     | 0.1864 |
 
 $F_{state}$ = $\frac{MSR}{MSE}$ ~ F(1,n-2)
 
