--- a/HW1207/13_陳峻毅/CH12.03_Q10.md
+++ b/HW1207/13_陳峻毅/CH12.03_Q10.md
@@ -50,7 +50,7 @@ $\text{上限} = -1.251 + (2.571 \cdot 0.120) = -0.943$
 表格中的 $R^2$ 值為：
 $R^2 = 0.9564$
 
-解釋：$R^2$ 表示模型可以解釋 $95.64\%$ 的數據變異性。這說明回歸模型的解釋力非常強，絕大多數的 y 變異可以由 x 解釋。
+解釋：$R^2$表示模型可以解釋 95.64% 的數據變異性。這說明回歸模型的解釋力非常強，絕大多數的 y 變異可以由 x 解釋。
 
 ---
 ### 總結
