--- a/HW1207/HW1207Q06.md
+++ b/HW1207/HW1207Q06.md
@@ -1,3 +1,5 @@
+姓名:陳偉豪  學號:IOF109006
+
 ![image](https://github.com/user-attachments/assets/0bb55bdf-7c3c-4065-9b49-0854f5711cfc)
 
 題目數據展示了 x（儲存溫度）和 y（草莓的品質）之間的關係,如下表紀錄: 
