--- a/HW1207/13_陳峻毅/CH12.05_Q03_Q05.md
+++ b/HW1207/13_陳峻毅/CH12.05_Q03_Q05.md
@@ -15,7 +15,7 @@
    $\hat{y}_0 = 0.074 + 0.46(5) = 2.374$
 
 2. **計算標準誤差 MSE：**
-   $s = \sqrt{\frac{SSE}{n-2}} = \sqrt{\frac{24}{10-2}} = \sqrt{3} \approx 1.732$
+   $MSE = \sqrt{\frac{SSE}{n-2}} = \sqrt{\frac{24}{10-2}} = \sqrt{3} \approx 1.732$
 
 3. **計算 $\text{SE}_{\hat{y}_0}$ 的值（平均值的標準誤差）：**
    $\text{SE}_{\hat{y}_0} = s \sqrt{\frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i^2) - \frac{(\sum x_i)^2}{n}}}$
