--- a/HW1207/HW1207Q08.md
+++ b/HW1207/HW1207Q08.md
@@ -21,3 +21,10 @@ $R^2 =\frac{SSR}{Total SS}$
 $R^2 = \frac{14.4}{16} = 0.9 = 90%$  
 
 ## R2的定義代表迴歸模式之變異值與所有yi變異量之比例，R2愈大，代表此迴歸模式能夠解釋全體yi變異量的比例愈大。因此R2愈接近1.0，代表此模式愈有解釋能力。
+
+
+![image](https://github.com/user-attachments/assets/2d5881d1-d56f-408a-95f6-ea1a2f43064b)
+
+![image](https://github.com/user-attachments/assets/53bb19ed-a98f-41bc-b7f5-5100f70ec46f)
+
+![image](https://github.com/user-attachments/assets/ff9f4cbc-8f77-47b1-b23e-c2c118d1feb4)
