--- a/HW1207/HW1207Q08.md
+++ b/HW1207/HW1207Q08.md
@@ -20,8 +20,10 @@ $R^2 =\frac{SSR}{Total SS}$
 
 $R^2 = \frac{14.4}{16} = 0.9 = 90%$  
 
-## R2的定義代表迴歸模式之變異值與所有yi變異量之比例，R2愈大，代表此迴歸模式能夠解釋全體yi變異量的比例愈大。因此R2愈接近1.0，代表此模式愈有解釋能力。
+## R2 是反應變數變異中由其與一個或多個預測變數的關係所解釋的百分比。一般而言，R2 越大，模型與資料配適得越好。
 
+
+Excel驗證
 
 ![image](https://github.com/user-attachments/assets/2d5881d1-d56f-408a-95f6-ea1a2f43064b)
 
