--- a/HW1123/12_譚玥湄/CH09.04_Q01-03.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q01-03.md
@@ -1,73 +1,9 @@
 CH09.04_Q01-03  
-Identifying Parts of a Test Use the information in Exercises 1–3. State the null and alternative hypotheses;calculate the appropriate test statistic; provide an $$\alpha$$ =.05 rejection region; and state your conclusions.  
-1. A random sample of n = 1000 from a binomial population contained 279 successes. You wish to show that p < .3.  
-2. A random sample of n = 1400 observations from a binomial population produced x5529 successes. You wish to show that p differs from .4.  
-3. Seventy-two successes were observed in a random sample of n = 120 observations from a binomial population. You wish to show that p > .5.
 
----
-Here’s the solution for each of the three problems step by step:
-________________________________________
-Problem 1   
-Hypotheses  
-•	Null Hypothesis (H0H_0H0): p=0.3p = 0.3p=0.3 (The population proportion is 0.3.)  
-•	Alternative Hypothesis (HaH_aHa): p<0.3p < 0.3p<0.3 (The population proportion is less than 0.3.)  
+(1) H0:p=.3. Ha :p<.3  (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.3)/√((0.3*0.7)/100 )≈ -1.449 (4) α = 0.05, Z = -1.449, (查表得知) RR = {Z < -1.645}  (5) 因為Z統計檢定量-1.449 > Critical value -1.645, 所以不拒絕虛無假設 H0，(6) 無直接證據證明 p < .3  
 
-Test Statistic
-For a binomial proportion test, the test statistic is given by:  
-z=p^−p0p0(1−p0)nz = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0(1 - p_0)}{n}}}z=np0(1−p0)p^−p0  
-Where:  
-•	p^=xn=2791000=0.279\hat{p} = \frac{x}{n} = \frac{279}{1000} = 0.279p^=nx=1000279=0.279,  
-•	p0=0.3p_0 = 0.3p0=0.3,  
-•	n=1000.
-Calculate the standard error (SESESE):
-SE=p0(1−p0)n=0.3(1−0.3)1000=0.3⋅0.71000≈0.01449SE = \sqrt{\frac{p_0(1 - p_0)}{n}} = \sqrt{\frac{0.3(1 - 0.3)}{1000}} = \sqrt{\frac{0.3 \cdot 0.7}{1000}} \approx 0.01449SE=np0(1−p0)=10000.3(1−0.3)=10000.3⋅0.7≈0.01449
-Calculate zzz:
-z=p^−p0SE=0.279−0.30.01449≈−0.0210.01449≈−1.45z = \frac{\hat{p} - p_0}{SE} = \frac{0.279 - 0.3}{0.01449} \approx \frac{-0.021}{0.01449} \approx -1.45z=SEp^−p0=0.014490.279−0.3≈0.01449−0.021≈−1.45
-Rejection Region
-For a one-tailed test at α=0.05\alpha = 0.05α=0.05, the critical zzz-value is −1.645-1.645−1.645.
-•	Reject H0H_0H0 if z<−1.645z < -1.645z<−1.645.
-Since z=−1.45z = -1.45z=−1.45 is not less than −1.645-1.645−1.645, fail to reject H0H_0H0.
-Conclusion
-At the 5% significance level, there is insufficient evidence to conclude that p<0.3p < 0.3p<0.3.
-________________________________________
-Problem 2 
-Hypotheses
-•	Null Hypothesis (H0H_0H0): p=0.4p = 0.4p=0.4 (The population proportion is 0.4.)
-•	Alternative Hypothesis (HaH_aHa): p≠0.4p \neq 0.4p=0.4 (The population proportion differs from 0.4.)  '
+(2) H0:p=.4. Ha :p<>0.4 (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.4)/√((0.4*0.6)/100 )≈ -1.688 (4) α = 0.05, Z = -1.688, (查表得知) RR = {Z < -1.645}  (5) 因為Z統計檢定量-1.668 > Critical value -1.645, 所以不拒絕虛無假設 H0，(6) 無直接證據證明 p < >.4  
 
-Test Statistic
-p^=xn=5291400≈0.37786\hat{p} = \frac{x}{n} = \frac{529}{1400} \approx 0.37786p^=nx=1400529≈0.37786
-Calculate the standard error (SESESE):
-SE=p0(1−p0)n=0.4(1−0.4)1400=0.4⋅0.61400≈0.01307SE = \sqrt{\frac{p_0(1 - p_0)}{n}} = \sqrt{\frac{0.4(1 - 0.4)}{1400}} = \sqrt{\frac{0.4 \cdot 0.6}{1400}} \approx 0.01307SE=np0(1−p0)=14000.4(1−0.4)=14000.4⋅0.6≈0.01307
-Calculate zzz:
-z=p^−p0SE=0.37786−0.40.01307≈−0.022140.01307≈−1.69z = \frac{\hat{p} - p_0}{SE} = \frac{0.37786 - 0.4}{0.01307} \approx \frac{-0.02214}{0.01307} \approx -1.69z=SEp^−p0=0.013070.37786−0.4≈0.01307−0.02214≈−1.69
-Rejection Region
-For a two-tailed test at α=0.05\alpha = 0.05α=0.05, the critical zzz-values are ±1.96\pm 1.96±1.96.
-•	Reject H0H_0H0 if z<−1.96z < -1.96z<−1.96 or z>1.96z > 1.96z>1.96.
-Since z=−1.69z = -1.69z=−1.69 is not in the rejection region, fail to reject H0H_0H0.
-Conclusion
-At the 5% significance level, there is insufficient evidence to conclude that ppp differs from 0.4.
-________________________________________
-Problem 3
-Hypotheses  
-•	Null Hypothesis ($$H_0$$): p=0.5(The population proportion is 0.5.)  
-•	Alternative Hypothesis  ($$H_a$$): p>0.5 (The population proportion is greater than 0.5.)  
+(3) H0:p=.5 Ha :p>0.5  (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.5)/√((0.5*0.5)/100 )≈ 2.191 (4) α = 0.05, Z = 2.191,(查表得知) RR = {Z < -1.645}  (5) 因為Z統計檢定量2.191 > Critical value -1.645, 所以拒絕虛無假設 H0，(6) 直接證據證明 p>.5
 
-Test Statistic  
-p^=xn=72120=0.6\hat{p} = \frac{x}{n} = \frac{72}{120} = 0.6p^=nx=12072=0.6
-Calculate the standard error (SES):  
-SE=p0(1−p0)n=0.5(1−0.5)120=0.5⋅0.5120≈0.04564SE = \sqrt{\frac{p_0(1 - p_0)}{n}} = \sqrt{\frac{0.5(1 - 0.5)}{120}} = \sqrt{\frac{0.5 \cdot 0.5}{120}} \approx 0.04564SE=np0(1−p0)=1200.5(1−0.5)=1200.5⋅0.5≈0.04564  
-Calculate zzz:  
-z=p^−p0SE=0.6−0.50.04564≈0.10.04564≈2.19z = \frac{\hat{p} - p_0}{SE} = \frac{0.6 - 0.5}{0.04564} \approx \frac{0.1}{0.04564} \approx 2.19z=SEp^−p0=0.045640.6−0.5≈0.045640.1≈2.19  
-Rejection Region  
-For a one-tailed test at α=0.05\alpha = 0.05α=0.05, the critical zzz-value is 1.6451.6451.645.
-•	Reject H0H_0H0 if z>1.645z > 1.645z>1.645.
-Since z=2.19>1.645z = 2.19 > 1.645z=2.19>1.645, reject H0H_0H0.
-Conclusion  
-At the 5% significance level, there is sufficient evidence to conclude that p>0.5p > 0.5p>0.5.
-________________________________________
-Summary of Results
-1.	Problem 1: Fail to reject H0H_0H0. Insufficient evidence to conclude p<0.3p < 0.3p<0.3.
-2.	Problem 2: Fail to reject H0H_0H0. Insufficient evidence to conclude p≠0.4p \neq 0.4p=0.4.
-3.	Problem 3: Reject H0H_0H0. Sufficient evidence to conclude p>0.5p > 0.5p>0.5.
 
