--- a/HW1123/12_譚玥湄/CH09.04_Q01-03.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q01-03.md
@@ -1,9 +1,5 @@
-CH09.04_Q01-03  
+(1) H0:p=.3. Ha :p<.3  (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.3)/√((0.3*0.7)/100 )≈ -1.449 (4) α = 0.05, Z = -1.449, (查表得知) RR = {Z < -1.645}  (5) 因為Z統計檢定量-1.449 > Critical value -1.645, 所以不拒絕虛無假設 H0，(6) 無直接證據證明 p < .3
 
-(1) H0:p=.3. Ha :p<.3  (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.3)/√((0.3*0.7)/100 )≈ -1.449 (4) α = 0.05, Z = -1.449, (查表得知) RR = {Z < -1.645}  (5) 因為Z統計檢定量-1.449 > Critical value -1.645, 所以不拒絕虛無假設 H0，(6) 無直接證據證明 p < .3  
+(2) H0:p=.4. Ha :p<>0.4 (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.4)/√((0.4*0.6)/100 )≈ -1.688 (4) α = 0.05, Z = -1.688, (查表得知) RR = {Z < -1.96 }  (5) 因為Z統計檢定量-1.668 > Critical value -1.96(2/α), 所以不拒絕虛無假設 H0，(6) 無直接證據證明 p < >.4
 
-(2) H0:p=.4. Ha :p<>0.4 (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.4)/√((0.4*0.6)/100 )≈ -1.688 (4) α = 0.05, Z = -1.688, (查表得知) RR = {Z < -1.645}  (5) 因為Z統計檢定量-1.668 > Critical value -1.645, 所以不拒絕虛無假設 H0，(6) 無直接證據證明 p < >.4  
-
-(3) H0:p=.5 Ha :p>0.5  (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.5)/√((0.5*0.5)/100 )≈ 2.191 (4) α = 0.05, Z = 2.191,(查表得知) RR = {Z < -1.645}  (5) 因為Z統計檢定量2.191 > Critical value -1.645, 所以拒絕虛無假設 H0，(6) 直接證據證明 p>.5
-
-
+(3) H0:p=.5 Ha :p>0.5  (2) set α =.05 (3) Zstat = (p^- p)/( √(p*(1-p)/n )), zstat =(0.297-0.5)/√((0.5*0.5)/100 )≈ 2.191 (4) α = 0.05, Z = 2.191,(查表得知) RR = {Z < 1.645}  (5) 因為Z統計檢定量2.191 > Critical value 1.645, 所以拒絕虛無假設 H0，(6) 直接證據證明 p>.5
